Add basic orm layer

--- a/Epam.Wunderlist.Kosinov.Klimchuk/ORM/ORM.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/ORM/ORM.csproj
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationDbContext.cs" />
+    <Compile Include="Goal.cs" />
+    <Compile Include="GoalFolder.cs" />
+    <Compile Include="GoalList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
