add all layers basic implementation

--- a/Epam.Wunderlist.Kosinov.Klimchuk/DAL.Interfacies/DAL.Interface.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/DAL.Interfacies/DAL.Interface.csproj
@@ -49,7 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO\DalUser.cs" />
+    <Compile Include="DTO\DalFile.cs" />
     <Compile Include="DTO\IEntity.cs" />
+    <Compile Include="DTO\DalSubItem.cs" />
+    <Compile Include="DTO\DalToDoItem.cs" />
+    <Compile Include="DTO\DalToDoList.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\IUnitOfWork.cs" />
     <Compile Include="Repository\IUserRepository.cs" />
