--- a/Epam.Wunderlist.Kosinov.Klimchuk/BLL.Interfacies/BLL.Interface.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/BLL.Interfacies/BLL.Interface.csproj
@@ -89,8 +89,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\UserEntity.cs" />
-    <Compile Include="Services\ITaskSearchService.cs" />
+    <Compile Include="Entities\BllFile.cs" />
+    <Compile Include="Entities\BllSubItem.cs" />
+    <Compile Include="Entities\BllToDoItem.cs" />
+    <Compile Include="Entities\BllToDoList.cs" />
+    <Compile Include="Entities\BllUser.cs" />
+    <Compile Include="Entities\IEntity.cs" />
+    <Compile Include="Services\ICrudService.cs" />
+    <Compile Include="Services\IToDoListSearchService.cs" />
     <Compile Include="Services\ISignInService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -99,6 +105,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
