--- a/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
@@ -100,6 +100,10 @@
   <ItemGroup>
     <Compile Include="Mappers\BllEntityMappers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\SubItemService.cs" />
+    <Compile Include="Services\ToDoListService.cs" />
+    <Compile Include="Services\ToDoItemService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\SignInService.cs" />
   </ItemGroup>
