--- a/Epam.Wunderlist.Kosinov.Klimchuk/DAL/DAL.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/DAL/DAL.csproj
@@ -49,7 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Concrete\OrmToDalMapper.cs" />
+    <Compile Include="Concrete\FileRepository.cs" />
+    <Compile Include="Concrete\SubItemRepository.cs" />
+    <Compile Include="Concrete\ToDoListRepository.cs" />
     <Compile Include="Concrete\UnitOfWork.cs" />
+    <Compile Include="Concrete\ToDoItemRepository.cs" />
     <Compile Include="Concrete\UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
