--- a/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
@@ -107,9 +107,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mappers\BllEntityMappers.cs" />
+    <Compile Include="Mappers\BllSubItemMapper.cs" />
+    <Compile Include="Mappers\BllFileMapper.cs" />
+    <Compile Include="Mappers\BllItemMapper.cs" />
+    <Compile Include="Mappers\BllListMapper.cs" />
+    <Compile Include="Mappers\BllUserMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FileService.cs" />
+    <Compile Include="Services\Service.cs" />
     <Compile Include="Services\SubItemService.cs" />
     <Compile Include="Services\ToDoListService.cs" />
     <Compile Include="Services\ToDoItemService.cs" />
