--- a/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/BLL/BLL.csproj
@@ -107,7 +107,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mappers\BllEntityMappers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FileService.cs" />
     <Compile Include="Services\SubItemService.cs" />
@@ -132,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lucene\" />
+    <Folder Include="Mappers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
