add web api controller

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Wunderlist.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Wunderlist.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\WebApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
