--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Web.config
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Web.config
@@ -24,7 +24,7 @@
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="100000"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
