--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Wunderlist.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Wunderlist.csproj
@@ -92,7 +92,6 @@
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
@@ -240,6 +239,12 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\calendar.png" />
+    <Content Include="Content\magnify.png" />
+    <Content Include="Content\main.jpg" />
+    <Content Include="Content\menu.png" />
+    <Content Include="Content\plus-white.png" />
+    <Content Include="Content\plus.png" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
