--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.Services/Epam.Wunderlist.Services.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.Services/Epam.Wunderlist.Services.csproj
@@ -100,9 +100,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Epam.Wunderlist.DataAccess.MssqlProvider.Interfaces\Epam.Wunderlist.DataAccess.MssqlProvider.Interfaces.csproj">
+    <ProjectReference Include="..\Epam.Wunderlist.DataAccess.Interfaces\Epam.Wunderlist.DataAccess.Interfaces.csproj">
       <Project>{06204c03-41a1-4567-8edd-88ae0fc4391b}</Project>
-      <Name>Epam.Wunderlist.DataAccess.MssqlProvider.Interfaces</Name>
+      <Name>Epam.Wunderlist.DataAccess.Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\Epam.Wunderlist.DomainModel\Epam.Wunderlist.DomainModel.csproj">
       <Project>{9e4869a4-a794-424b-9309-b1d2e2d77399}</Project>
