--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.DataAccess.MssqlProvider.Interfaces/Epam.Wunderlist.DataAccess.Interfaces.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.DataAccess.MssqlProvider.Interfaces/Epam.Wunderlist.DataAccess.Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB36F59D-3F3C-4594-944C-A0D271591A97}</ProjectGuid>
+    <ProjectGuid>{06204C03-41A1-4567-8EDD-88AE0FC4391B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Epam.Wunderlist.DataAccess.MssqlProvider</RootNamespace>
-    <AssemblyName>Epam.Wunderlist.DataAccess.MssqlProvider</AssemblyName>
+    <RootNamespace>Epam.Wunderlist.DataAccess.Interfaces</RootNamespace>
+    <AssemblyName>Epam.Wunderlist.DataAccess.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,33 +48,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationDbContext.cs" />
-    <Compile Include="Concrete\Repository.cs" />
-    <Compile Include="Concrete\ToDoListRepository.cs" />
-    <Compile Include="Concrete\UnitOfWork.cs" />
-    <Compile Include="Concrete\ToDoItemRepository.cs" />
-    <Compile Include="Concrete\UserRepository.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="ModelsConfiguration\ToDoListConfiguration.cs" />
-    <Compile Include="ModelsConfiguration\ToDoItemConfiguration.cs" />
-    <Compile Include="ModelsConfiguration\UserConfiguration.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\IToDoItemRepository.cs" />
+    <Compile Include="Repository\IToDoListRepository.cs" />
+    <Compile Include="Repository\IUnitOfWork.cs" />
+    <Compile Include="Repository\IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Epam.Wunderlist.DataAccess.Interfaces\Epam.Wunderlist.DataAccess.Interfaces.csproj">
-      <Project>{06204c03-41a1-4567-8edd-88ae0fc4391b}</Project>
-      <Name>Epam.Wunderlist.DataAccess.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Epam.Wunderlist.DomainModel\Epam.Wunderlist.DomainModel.csproj">
-      <Project>{9e4869a4-a794-424b-9309-b1d2e2d77399}</Project>
-      <Name>Epam.Wunderlist.DomainModel</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Epam.Wunderlist.DomainModel\Epam.Wunderlist.DomainModel.csproj">
+      <Project>{9e4869a4-a794-424b-9309-b1d2e2d77399}</Project>
+      <Name>Epam.Wunderlist.DomainModel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
