--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
@@ -65,6 +65,9 @@
   <package id="Ninject.Web.Common" version="3.2.4-unstable-004" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
+  <package id="NLog" version="4.2.3" targetFramework="net452" />
+  <package id="NLog.Config" version="4.2.3" targetFramework="net452" />
+  <package id="NLog.Schema" version="4.0.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net452" />
