add nlog for exceptions

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Epam.Wunderlist.WebApp.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Epam.Wunderlist.WebApp.csproj
@@ -239,6 +239,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HttpResponseBuilder.cs" />
+    <Compile Include="Infrastructure\ActionFilters\GlobalExceptionAttribute.cs" />
     <Compile Include="Infrastructure\ActionFilters\LoggingFilterAttribute.cs" />
     <Compile Include="Infrastructure\NinjectDependencyResolver.cs" />
     <Compile Include="NLogger.cs" />
