add angular functionality

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Epam.Wunderlist.WebApp.csproj
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Epam.Wunderlist.WebApp.csproj
@@ -301,6 +301,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Controllers\DescriptionController.js" />
     <Content Include="Scripts\Controllers\ModalListController.js" />
+    <Content Include="Scripts\Controllers\ModalUserController.js" />
     <Content Include="Scripts\Controllers\ToDoItemController.js" />
     <Content Include="Scripts\Controllers\ToDoListsController.js" />
     <Content Include="Scripts\Controllers\UserController.js" />
