--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Angular.UI.Bootstrap" version="1.1.2" targetFramework="net452" />
+  <package id="angular-file-upload" version="12.0.4" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.5.0" targetFramework="net452" />
   <package id="AngularJS.Resource" version="1.5.0" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
