--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/packages.config
@@ -8,6 +8,7 @@
   <package id="bootstrap" version="4.0.0-alpha2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net452" />
+  <package id="HubSpot.Tether" version="1.1.1" targetFramework="net452" />
   <package id="jQuery" version="2.0.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="1.2.3" targetFramework="net452" />
