--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Web.config
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Web.config
@@ -21,6 +21,10 @@
     <add key="repository" value="..\Debug\DependencyResolver.dll" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" redirectMode="ResponseRedirect" defaultRedirect="~/Error/Error">
+      <error statusCode="404" redirect="~/Error/Error404"/>
+    </customErrors>
+    
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
